--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,3 +247,12 @@ body.dark-mode table.dataTable tbody tr:hover {
     width: 100% !important;
     height: 100% !important;
 }
+
+.review {
+    overflow: hidden;
+}
+
+.slider .slide {
+    text-align: center;
+    font-size: 16px;
+}
